# sec-filings-agent

./: .env.example  .gitignore  DECISIONS.md  NOTES.md  PROJECT.md  ROADMAP.md  pyproject.toml
app/: explorer.py
data/: chroma_manifest.json
data/eval_sets/: financebench_starter.jsonl
notebooks/: 01_explore.ipynb  02_eval_explorer.ipynb  03_table_retrieval_audit.ipynb  04_edgartools_demo.ipynb
scripts/: ask.py  audit_answerability.py  build_index.py  build_starter_corpus.py  error_analysis.workflow.js  extract_financebench_evalset.py  inspect_chunks.py  inspect_one_filing.py  judge_audit.workflow.js  preflight_filing.py  regrade.py  run_eval.py  validate_judge.py
src/sec_filings/: __init__.py  config.py  inspection.py  observability.py
src/sec_filings/agent/: __init__.py  loop.py  models.py
src/sec_filings/corpus/: __init__.py  chunker.py  ingest.py  models.py
src/sec_filings/evaluation/: __init__.py  judge.py  models.py
src/sec_filings/retrieval/: __init__.py  embedding.py  hybrid.py  lexical.py  vector_store.py
src/sec_filings/tools/: __init__.py  fmp.py  retrieve.py
tests/corpus/: test_chunker.py  test_ingest.py
tests/evaluation/: test_judge.py
tests/retrieval/: test_hybrid_rrf.py
tests/tools/: test_fmp.py
