[project]
name = "sec-filings-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "cohere>=7.0.0",
    "edgartools>=5.31.5",
    "httpx>=0.28.1",
    "langfuse>=4.7.1",
    "openai>=2.38.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "tiktoken>=0.8.0",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "plotly>=6.7.0",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_filings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
